k8s/base/postgresql/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-user-to-database
  namespace: database
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["user-service"]
